# Haskell-Book

./: README.md  haskell-book.cabal  stack.yaml
Chapter 11/: Vehicle-Exercis.hs
src/Additional/: Applicative.hs  Exercises.hs  Functors.hs  Monad.hs  Trial.hs  gimmePerson.hs  palindrome.hs  unfold.hs
src/Additional/applicative/: Main.hs  applicative.cabal  stack.yaml
src/Additional/semigroup/: Main.hs  Semigroup.cabal
src/Chapter06/: Equality.hs  Exercises.hs
src/Chapter07/: Company.hs  Penguins.hs
src/Chapter08/: Exercises.hs  WordNumber.hs
src/Chapter09/: CeasarCipher.hs  Exercises.hs
src/Chapter10/: DataBase.hs  Exercises.hs
src/Chapter11/: 1  As-patterns.hs  BinararyTree.hs  BinaryTree.hs  Ciphers.hs  Phone.hs  Programmer.hs  Vehicles.hs
src/Chapter12/: Exercises.hs  Unfold.hs
src/Chapter14/: Addition.hs  ArbitraryInstances.hs  Exercises.hs  WordNumberTest.hs
src/Chapter15/: Exercises.hs  Monoids.hs
src/Chapter16/: Exercises.hs  HeavyLifting.hs  Instances.hs
src/Chapter17/: BadMonoid.hs  Exercises.hs  ListApp.hs  Validation.hs
src/Chapter18/: Monad.hs
src/Chapter20/: Foldable.hs
src/Chapter21/: Exercises.hs  HttpStuff.hs  MorseCont.hs  SkiFree.hs
src/Chapter22/: Exercise.hs  Reader.hs  ReaderPrac.hs  ReadingComp.hs
src/Chapter23/: Exercises.hs  FizzBuzz.hs  Moi.hs  RandomExample.hs
src/Chapter24/: AltParsing.hs  DataIni.hs  Parsers.hs  TextFractions.hs
src/Chapter25/: BiFunctor.hs  IDT.hs  Types.hs
src/Chapter26/: Exercises.hs  HitCounter.hs  InnerOuter.hs  MonadIO.hs  Scotty.hs  Transformers.hs
src/Chapter27/: Exercises.hs  StrictList.hs
src/Chapter28/: Bench.hs  BenchMap.hs  DiffList.hs  Profiling.hs  Queue.hs
src/Chapter29/: Soup.hs
src/Chapter30/: ourExceptions.hs  stopTheParty.hs  try.hs  wp
src/Chapter30/WritingToFiles/: wp  writepls.hs
