name:                Semigroup  
version:             0.1.0.0
homepage:            https://github.com/Bradley Heather/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Bradley Heather 
maintainer:          bradleymheather@gmail.com
copyright:           MIT License
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable semigroup 
  ghc-options:        -Wall -fno-warn-orphans
  main-is:            Main.hs
  hs-source-dirs:     .
  build-depends:      base >=4.7 && <5
                    , containers
                    , QuickCheck
  default-language:   Haskell2010
